--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Document</title>
+    <title>Car store</title>
     <link rel="stylesheet" href="js/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,8 +24,6 @@
                         <li><a href="#">Showroom</a></li>
                         <li><a href="#">Credit Simulation</a></li>
                         <li><a href="#">Contact Us</a></li>
-
-                        <!-- <ul class="navbar__menu-list"> -->
                         <li class="navbar__menu-list">
                             <a href="#" class="navbar__menu-link">Page 
                                     <img src="img/Vector.svg" alt="">
@@ -45,23 +43,16 @@
                                 </li>
                             </ul>
                         </li>
-                        <!-- </ul> -->
                     </ul>
-
                 </nav>
                 <div class="navbar__additem">
                     <div class="navbar__rectangle"></div>
                     <button class="navbar__btn">Add Your Item</button>
                 </div>
             </div>
-
-
             <p class="company-name">Esemka Car</p>
-            <!-- Slider main container -->
             <div class="swiper">
-                <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
-                    <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="swiper-slider__container">
                             <div class="swiper-slider__slide swiper-slider">
@@ -81,7 +72,6 @@
                                     </ul>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -103,7 +93,6 @@
                                     </ul>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -126,12 +115,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
             </div>
             <button class="slider-btn">By Now</button>
         </div>
-
     </header>
     <div class="select-car">
         <select class="select-car__select" name="select-car__select" required="required">
@@ -154,7 +141,6 @@
             <button id="collection__btn--left"></button>
             <button id="collection__btn--right"></button>
         </div>
-
         <div class="collection__models">
             <div class="collection__model-1">
                 <div class="collection__item">
@@ -396,5 +382,4 @@
     <script src="js/swiper/swiper-bundle.min.js "></script>
     <script src="js/script.js "></script>
 </body>
-
 </html>
