--- a/index.html
+++ b/index.html
@@ -12,45 +12,43 @@
 
 <body>
     <header class="header">
-        <div class="header__wrapper">
-            <div class="navbar">
-                <a href="#">
-                    <img src="./img/Logo.svg" alt="">
-                </a>
-                <nav class="navbar__menu">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Explore</a></li>
-                        <li><a href="#">Showroom</a></li>
-                        <li><a href="#">Credit Simulation</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li class="navbar__menu-list">
-                            <a href="#" class="navbar__menu-link">Page 
-                                    <img src="img/Vector.svg" alt="">
-                                </a>
-                            <ul class="navbar__sub-menu-list">
-                                <li>
-                                    <a href="#" class="navbar__sub-menu-link">Page 1</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="navbar__sub-menu-link">Page 2</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="navbar__sub-menu-link">Page 3</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="navbar__sub-menu-link">Page 4</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="navbar__additem">
-                    <div class="navbar__rectangle"></div>
-                    <button class="navbar__btn">Add Your Item</button>
+        <div class="container">
+            <div class="header__block">
+                <img class="logo" src="./img/Logo.svg" alt="">
+                <div class="navbar header__navbar">
+                    <nav class="navbar__menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Explore</a></li>
+                            <li><a href="#">Showroom</a></li>
+                            <li><a href="#">Credit Simulation</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li class="navbar__menu-list">
+                                Page
+                                <ul class="navbar__sub-menu-list">
+                                    <li>
+                                        <a href="#" class="navbar__sub-menu-link">Page 1</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="navbar__sub-menu-link">Page 2</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="navbar__sub-menu-link">Page 3</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="navbar__sub-menu-link">Page 4</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__block-user">
+                    <div class="header__rectangle"></div>
+                    <button class="header__btn">Add Your Item</button>
                 </div>
             </div>
-            <p class="company-name">Esemka Car</p>
+            <p class="header__company-name">Esemka Car</p>
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -289,7 +287,7 @@
                 <p class="download__text-item">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <ul class="download__list ">
+                <ul class="download__list">
                     <li>
                         Best Deals
                     </li>
@@ -342,7 +340,7 @@
     </div>
     <footer class="footer ">
         <div class="footer__wrapper ">
-            <div class="footer-container ">
+            <div class="footer-container">
                 <div class="footer-container__elem1 ">
                     <div class="footer-container__logo">
                         <img src="./img/logo.svg " alt=" ">
