--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="header__block">
-                <img class="logo" src="./img/Logo.svg" alt="">
+                <img class="logo" src="./img/logo.svg" alt="">
                 <div class="navbar header__navbar">
                     <nav class="navbar__menu">
                         <ul>
