--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="header__block">
                 <a href="index.html">
-                    <img class="logo" src="./img/Logo.svg" alt="">
+                    <img src="./img/Logo.svg" alt="">
                 </a>
                 <div class="navbar header__navbar">
                     <nav class="navbar__menu">
